fix: layout issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,8 +28,8 @@
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  max-width: 100%;
+  height: 100%
 }
 
 body {
@@ -38,9 +38,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   height: 100%;
 }
 
