--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,10 +2,11 @@
     width: 100%;
     height: 100%;
     text-align: center;
-    padding-top: 10pt;
+    padding: 10pt 20pt 40pt 20pt;
+
   }
   
-  .schedule {
+  .showtime {
     font-size: 1.2em;
     margin-top: 5px;
     color: var(--text-muted);
@@ -27,11 +28,12 @@
   }
   
   .seats {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(25px, 1fr));
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 7px;
-    margin: 1em 0;
     margin-bottom: 30pt;
+    padding: 0 40pt 0 40pt;
   }
   
   .seat {
@@ -66,24 +68,23 @@
     padding: 10px 20px;
     cursor: pointer;
     font-size: 1.2em;
-    width: 150pt;
+    width: 250pt;
+    margin-bottom: 20pt;
   }
   
   .layout {
     display: flex;
-    flex-wrap: wrap;
-    max-width: 100%;
     flex-direction: column;
-    padding: 40pt 30pt 0 30pt;
+    max-width: 100%;
   }
   
   .seating,
   .movieDetails {
-    flex: 1 1 calc(100% - 20px);
     max-width: 100%;
     height: auto;
     text-align: left;
     margin-top: 30px;
+    margin-bottom: 30pt;
   }
   
   .screenInfo {
@@ -91,6 +92,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    padding: 0 40pt 0 40pt;
   }
   
   .statusIcons {
@@ -100,7 +102,7 @@
   }
   
   .screen {
-    width: 250pt;
+    width: 100%;
     height: 15pt;
     background: var(--screen-bg);
     margin-bottom: 40pt;
@@ -164,69 +166,30 @@
     }
   }
   
-  @media (max-width: 600px) {
-    .layout {
-      flex-direction: row;
-    }
-  
-    .seating,
-    .movieDetails {
-      flex: 1 1 100%;
-    }
-  }
   
   @media (min-width: 601px) and (max-width: 900px) {
     .layout {
       flex-direction: row;
     }
-  
-    .seating,
-    .movieDetails {
-      flex: 1 1 calc(50% - 20px);
-    }
-  
-    .movieDetails {
-      margin-left: 30pt;
-    }
+   
   }
   
   @media (min-width: 901px) {
-    .seats {
-        padding: 0 100px;
+    .container {
+      padding: 10pt 150pt 40pt 150pt;
     }
+
     .layout {
       flex-direction: row;
     }
   
-    .seating,
-    .movieDetails {
-      flex: 1 1 calc(33.33% - 20px);
-    }
-  
-    .movieDetails {
-      margin-left: 30pt;
-    }
   }
   
-  @media (orientation: portrait) {
-    .seating,
-    .movieDetails {
-      flex: 1 1 100%;
-    }
-  }
   
   @media (orientation: landscape) {
     .layout {
       flex-direction: row;
     }
-  
-    .seating,
-    .movieDetails {
-      flex: 1 1 calc(33.33% - 20px);
-    }
-  
-    .movieDetails {
-      margin-left: 30pt;
-    }
+
   }
   
